# ai-app-radar

./: .dockerignore  .envrc.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent/skills/app_scout/: SKILL.md
.agent/skills/create_report/: SKILL.md
.agent/skills/create_resume/: SKILL.md
.agent/skills/evaluate_roles/: SKILL.md
.agent/workflows/: app-enrich.md  app-evaluate.md  app-report.md  app-scout.md
.claude/commands/app/: batch-onboard.md  onboard-company.md  report.md  setup.md  sync.md
.claude/commands/ops/: fix-pipeline-errors.md
.claude/skills/app-onboard-company/: SKILL.md
.claude/skills/app-setup/: SKILL.md
.claude/skills/create_report/: SKILL.md
.claude/skills/evaluate_roles/: SKILL.md
.github/workflows/: build.yml  docker.yml
configs/: companies.example.json  companies.json  profile.example.yaml  settings.yaml
src/: cli.py  main.py
src/api/: app.py  deps.py  routes.py  tasks.py
src/core/: agent.py  config.py  log_analyzer.py  logger.py  runtime.py  state_machine.py  store.py  task.py
src/enrich/: agent.py  consumer.py  producer.py  task.py
src/evaluate/: agent.py  consumer.py  fit_scorer.py  producer.py  task.py  vetting.py
src/repair/: repair.py
src/scout/: agent.py  consumer.py  history.yaml  producer.py  state_tracker.py  task.py  test_location_config.yaml
static/: index.html
tests/: conftest.py  test_filters.py  test_tracker.py  test_vetting.py
tuning/: case.py  judge.py  runner.py
tuning/cases/: google.yaml
(+56 files in other folders)
